fix: ensure text remains visible during webfont load

--- a/src/assets/sass/base/fonts.scss
+++ b/src/assets/sass/base/fonts.scss
@@ -1,4 +1,5 @@
 @font-face {
+	font-display: swap;
 	font-family: 'DIN Condensed';
 	src: url('/static/fonts/DINCondensed-Bold.woff2') format('woff2'),
 		url('/static/fonts/DINCondensed-Bold.woff') format('woff');
@@ -7,6 +8,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Gill Sans';
 	src: url('/static/fonts/GillSans.woff2') format('woff2'),
 		url('/static/fonts/GillSans.woff') format('woff');
@@ -15,6 +17,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Gill Sans';
 	src: url('/static/fonts/GillSans-Italic.woff2') format('woff2'),
 		url('/static/fonts/GillSans-Italic.woff') format('woff');
@@ -23,6 +26,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Gill Sans';
 	src: url('/static/fonts/GillSans-Bold.woff2') format('woff2'),
 		url('/static/fonts/GillSans-Bold.woff') format('woff');
@@ -31,6 +35,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Gill Sans';
 	src: url('/static/fonts/GillSans-BoldItalic.woff2') format('woff2'),
 		url('/static/fonts/GillSans-BoldItalic.woff') format('woff');
